<resources>
    <string name="app_name">FutureChat</string>
    <string name="activity_main_app_name_text">Chat of the future</string>
    <string name="activity_main_user_settings_content_description">userSettingsIcon</string>
    <string name="fragment_message_message_status_text">No messages</string>
    <string name="fragment_message_input_message_hint">Message…</string>
    <string name="fragment_message_send_message_content_description">iconToSendMessage</string>
    <string name="fragment_message_send_message_text">Send</string>
    <string name="fragment_user_settings_user_name_hint">Name</string>
    <string name="fragment_user_settings_save_and_back_text">Save and Back</string>
    <string name="fragment_user_settings_vk_auth_text">Auth</string>
    <string name="template_for_item_user_icon_content_description">iconOfEachUser</string>
    <string name="template_for_item_second_constraint_layout_user_name_tools_text">guest324234</string>
    <string name="template_for_item_second_constraint_layout_user_message_tools_text">MyMessage</string>
    <integer name="com_vk_sdk_AppId">6641389</integer>
</resources>
