<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_wallpaper"
    tools:context=".Fragment.MessageFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_message_recycler_view_height"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/template_for_item" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/inputMessage"
            android:layout_width="@dimen/fragment_message_input_message_width"
            android:layout_height="@dimen/fragment_message_input_message_height"
            android:layout_marginEnd="@dimen/fragment_message_input_message_margin_end"
            android:layout_marginStart="@dimen/fragment_message_input_message_margin_start"
            android:background="@null"
            android:hint="@string/fragment_message_input_message_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sendMessage"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/sendMessage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/fragment_message_send_message_height"
            android:layout_marginEnd="@dimen/fragment_message_send_message_margin_end"
            android:background="@null"
            android:contentDescription="@string/fragment_message_send_message_content_description"
            android:src="@drawable/ic_send"
            android:text="@string/fragment_message_send_message_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputMessage" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>