<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.UserSettingsFragment">

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_user_settings_user_name_hint"
        android:inputType="textPersonName"
        android:minWidth="@dimen/fragment_user_settings_user_name_min_width"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/saveAndBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/saveAndBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_user_settings_save_and_back_text"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/vkAuth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/fragment_user_settings_guideline_constraint_guide_begin" />

    <Button
        android:id="@+id/vkAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_user_settings_vk_auth_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/saveAndBack"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <!--<ImageView-->
        <!--android:id="@+id/userAvatar"-->
        <!--android:layout_width="269dp"-->
        <!--android:layout_height="239dp"-->
        <!--android:src="@android:color/background_light"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent" />-->

</android.support.constraint.ConstraintLayout>