<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/template_for_item_main_constraint_padding">

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/template_for_item_user_icon_margin_start"
        android:background="@drawable/background_avatar"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/template_for_item_user_icon_content_description"
        android:src="@drawable/ic_sentiment_satisfied"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="@dimen/template_for_item_second_constraint_layout_width"
        android:layout_height="wrap_content"
        android:background="@drawable/background_chat_bubble"
        android:backgroundTint="@color/colorPrimary"
        android:padding="@dimen/template_for_item_second_constraint_layout_padding"
        android:paddingStart="@dimen/template_for_item_second_constraint_layout_padding_start"
        app:layout_constraintBottom_toBottomOf="@+id/userIcon"
        app:layout_constraintStart_toEndOf="@+id/userIcon"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintWidth_min="200dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/template_for_item_second_constraint_layout_user_name_text_color"
            app:layout_constraintBottom_toTopOf="@+id/userMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/template_for_item_second_constraint_layout_user_name_tools_text" />

        <TextView
            android:id="@+id/userMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/template_for_item_second_constraint_layout_user_message_text_size"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/userName"
            app:layout_constraintEnd_toEndOf="@id/userName"
            app:layout_constraintStart_toStartOf="@+id/userName"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            tools:text="@string/template_for_item_second_constraint_layout_user_message_tools_text" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>